REFACTOR use new API Version REFACTOR use new java record feature REMOVED MessageRunnable